fixed alignment and color on h2 in join-us page

--- a/join-us-layout.css
+++ b/join-us-layout.css
@@ -10,6 +10,12 @@ h1 {
     padding-top: 0.5%;
 }
 
+h2 {
+    color: #ffffff;
+    align-items: center;
+    justify-content: center;
+}
+
 .nav-links {
     display: flex;
     justify-content:space-around;
